final changes to paper

--- a/ContinuousRatio/contBib.bib
+++ b/ContinuousRatio/contBib.bib
@@ -11,20 +11,34 @@
 	number={6},
 	pages={336-340},}
 
-@INPROCEEDINGS{Svensson1994,
-	author={L. J. {Svensson} and J. G. {Koller}},
-	booktitle={Proceedings of 1994 IEEE Symposium on Low Power Electronics}, 
-	title={Driving a capacitive load without dissipating fCV/sup 2/}, 
-	year={1994},
-	volume={},
-	number={},
+@INPROCEEDINGS{Svensson1994,
+
+	author={L. J. {Svensson} and J. G. {Koller}},
+
+	booktitle={Proceedings of 1994 IEEE Symposium on Low Power Electronics}, 
+
+	title={Driving a capacitive load without dissipating fCV{$^2$}}, 
+
+	year={1994},
+
+	volume={},
+
+	number={},
+
 	pages={100-101},}
 
-@ARTICLE{Butzen2016,
-	author={N. {Butzen} and M. S. J. {Steyaert}},
-	journal={IEEE Journal of Solid-State Circuits}, 
-	title={Scalable Parasitic Charge Redistribution: Design of High-Efficiency Fully Integrated Switched-Capacitor DC–DC Converters}, 
-	year={2016},
-	volume={51},
-	number={12},
+@ARTICLE{Butzen2016,
+
+	author={N. {Butzen} and M. S. J. {Steyaert}},
+
+	journal={IEEE Journal of Solid-State Circuits}, 
+
+	title={Scalable Parasitic Charge Redistribution: Design of High-Efficiency Fully Integrated Switched-Capacitor {DC–DC} Converters}, 
+
+	year={2016},
+
+	volume={51},
+
+	number={12},
+
 	pages={2843-2853},}
