--- a/LeakageModel/LeakageModel.tex
+++ b/LeakageModel/LeakageModel.tex
@@ -20,7 +20,7 @@
 	
 	
 	\section{Steady State Model}
-	Most charge pump architectures can be using as a set of flying capacitors cells which switch between 4 unique voltage domains, as in Fig. \ref{Fig:SCCell}. The flying capacitor cell can then be abstracted as the four terminal device seen in Fig. \ref{Fig:SCCell_Abs}. These four terminal devices can then be used to construct various dc-dc converter configurations, such the three stage Dickson in Fig. \ref{Fig:Dickson_Block} or the series parallel converter in Fig. \ref{Fig:SeriesP_Block}.
+	The foundational building block of most Switched Capacitor Power Converter (SCPC) architectures is the circuit in Fig. \ref{Fig:SCCell}, where the flying capacitor connects to 4 unique voltage domains. This flying capacitor cell can then be abstracted as the four terminal device seen in Fig. \ref{Fig:SCCell_Abs}. The SC cell can then be used to construct various dc-dc converter configurations, such as the three stage Dickson in Fig. \ref{Fig:Dickson_Block} or the series parallel converter in Fig. \ref{Fig:SeriesP_Block}.
 	
 	\begin{figure}
 		\centering
@@ -50,27 +50,48 @@
 		\label{Fig:SeriesP_Block}
 	\end{figure}
 	
-	The internal circuit representation of the four terminal model can be seen in Fig. \ref{Fig:CircEQ}, where $R_{Fly} = \frac{1}{f_{SW}C_{Fly}}$. However, this model neglects the impact of incomplete charge transfer on the output charge delivered, which limits its usefulness.
+	A steady state circuit representation of the four terminal model can be seen in Fig. \ref{Fig:CircEQ}, where $R_{Fly} = \frac{1}{f_{SW}C_{Fly}}$. However, this model neglects the impact switch resistance has on the equivalent resistance of the cell.
 	
 	\begin{figure}
 		\centering
 		\includegraphics[width=0.6\linewidth]{Figures/CellRes_SSL.pdf}
-		\label{Fig:CircEQ}
 		\caption{Equivalent circuit model of the four terminal device operating under SSL conditions.}
+		\label{Fig:CircEQ}
 	\end{figure}
 	
 	
-	The effect of incomplete charge transfer on the output and input charge characteristics of a dc-dc converter has been studied \cite{}. However, the model studied assumed ideal clock generation. The following analysis incorporates the resistance of clock drivers into the equations for input and output current. 
+	The effect of incomplete charge transfer on the output and input charge characteristics of a dc-dc converter has been studied \cite{Tanzawa2011}. However, the model studied assumed ideal clock generation. The following analysis incorporates the resistance of clock drivers into the equations for input and output current. 
 	
 	\subsection{Incomplete Charge Transfer}
-	The associated analysis occurs at steady state  some assumptions:
+	The associated analysis occurs at steady state with some assumptions:
+	
+	\begin{figure}
+		\begin{subfigure}{0.43\linewidth}
+			\centering
+			\includegraphics[width=\linewidth]{Figures/Phase1EQ.pdf}
+			\caption{Phase 1.}
+			\label{Fig:Phase1EQ}
+		\end{subfigure}
+		\hfill
+		\begin{subfigure}{0.43\linewidth}
+			\centering
+			\includegraphics[width=\linewidth]{Figures/Phase2EQ.pdf}
+			\caption{Phase 2.}
+			\label{Fig:Phase2EQ}
+		\end{subfigure}
+		\caption{Equivalent representation of \ref{Fig:SCCell}, with switch resistance $R_{SW}$, for both of its phases.}
+	\end{figure}
+	
 	\begin{itemize}
 		\item All the capacitors and resistors used in the analysis are linear and time invariant.
 		\item The value of $\alpha_T + \alpha_B < 0.1$.
 	\end{itemize}
-	The circuit in Fig.\ref{Fig:SCCell}, can be represented as Fig. \ref{} in its first phase, with Fig. \ref{} representing its second phase. The voltage at the top and bottom plates are labeled $V_{TP}$ and $V_{BP}$ respectively, while $V_{TP1}$, would specify the top plate voltage in the first phase.
+	The circuit in Fig.\ref{Fig:SCCell}, can be represented as Fig. \ref{Fig:Phase1EQ} in its first phase, with Fig. \ref{Fig:Phase2EQ} representing its second phase. The voltage at the top and bottom plates of the capacitor are labeled $V_{TP}$ and $V_{BP}$, $V_{TP1}$ for example, would specify top plate voltage in the first phase.
 	
-	The first order approximation of the voltage at $V_{TP1}$ is,
+	
+	
+	
+	The first order approximation of $V_{TP1}$ is,
 	\begin{equation}
 	V_{TP1}(t) = \exp\left(\frac{-t}{\tau}\right)V_{TP1}^{i} + \left(1 - \exp\left(\frac{-t}{\tau}\right)\right)V_{T1},
 	\end{equation}
@@ -78,7 +99,7 @@
 	\begin{equation}
 	\tau = 2R_{ON}C_{Fly}\left(1+\frac{\alpha_B+\alpha_T}{2}\right),
 	\end{equation}
-	and $V_{TP1}^i$ is the initial value of $V_{TP1}$ at the start of the first phase. The final value of $V_{TP1}$ can be evaluated at $t = \frac{T_{SW}}{2}$, as phase 1 occupies half the period,
+	and $V_{TP1}^i$ is the initial value of $V_{TP1}$ at the start of the first phase. The final value of $V_{TP1}$ can be evaluated at $t = \frac{T_{SW}}{2}$, as phase 1 occupies approximately half the period,
 	\begin{equation}
 	V_{TP1}^f = \exp\left\!(\tfrac{-T_{SW}}{2\tau}\right)V_{TP1}^{i} + \left(1 - \! \exp\!\left(\tfrac{-T_{SW}}{2\tau}\right)\right)V_{T1}.
 	\end{equation}	
@@ -148,5 +169,9 @@
 	\subsection{Leakage Effects}
 	The leakage effects associated with the transistors are modelled using theory from the \cite{} transistor models. The testing is performed in pspice, using the PTM to simulate the transistors used. 
 	
+	
+		
+	\bibliographystyle{IEEEtran}
+	\bibliography{leakBib}
 	
 \end{document}
