--- a/LeakageModel/LeakageModel.tex
+++ b/LeakageModel/LeakageModel.tex
@@ -180,9 +180,21 @@
 		\label{Fig:Circ_Res}
 	\end{figure}
 
-	This can then be verified using an ideal model of the circuit, using both a single SC cell, and in more complex configurations, such as the Dickson and series parallel. The resulting comparison can be seen in Fig. \ref{}, where the resistance and voltage are held constant, and the frequency is varied.
+	This can then be verified using simulations of the circuit, in which ideal switches are used. The simulated circuit is the N=3 Dickson Charge pump seen in Fig. \ref{Fig:Dickson_Block}, with two cores per stage 180$^\circ$ out of phase. The parameters used in the circuit are $V_{IN} = 1$V, $V_{OUT} = 3.5$V, C = 1n, $R_{SW}$ = 1$\Omega$. The simulations were run long enough to reach steady state, and the final values were recorded. The output and input currents of the structure were simulated for various frequencies and values of $\alpha_B = \alpha_T$. The corresponding comparisons between the simulation and model data can be seen in Fig. \ref{Fig:Iout_f},  and Fig. \ref{Fig:iin_f}.
 	
-	A second set of tests was run to verify that the impact of $\alpha_B$ and $\alpha_T$ was as predicted, which can be seen in Fig. \ref{}.
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.9\linewidth]{Figures/Iout_f.pdf}
+		\caption{Comparison of the modelled and simulated output current.}
+		\label{Fig:Iout_f}
+	\end{figure}
+
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.9\linewidth]{Figures/Iin_f.pdf}
+		\caption{Comparison of the modelled and simulated input current.}
+		\label{Fig:iin_f}
+	\end{figure}
 	
 	\subsection{Leakage Effects}
 	The leakage effects associated with the transistors are modelled using theory from the \cite{} transistor models. The testing is performed in pspice, using the PTM to simulate the transistors used. 
