--- a/Monolithic DC-DC Synthesis/Monolithic DC-DC Synthesis.tex
+++ b/Monolithic DC-DC Synthesis/Monolithic DC-DC Synthesis.tex
@@ -35,7 +35,9 @@
 	\chapter{Charge Reuse}
 	\chapter{Stage Outphasing}
 	\chapter{Reconfigurable Architectures}
-	\chapter{High Accuracy Models}
+	\include{AdvancedModels/AdvancedModels}
+	
+	
 	\chapter{Control}
 	\chapter{Design Examples}
 	\chapter{Continuously Scalable}
